# NiGEL

./: README.md  main.py  main.spec  nigel_state.json  persona.py  pyproject.toml
docs/: ContextualLens.md  Memory.md  ProjectBlueprint.md  TASKS.md  chatbotschema.yaml  current-architecture.md  dependencies.md  feature-set.md  index.md  installation.md  state_management.md  usage.md
docs/ExamplesAndRef/: Index.yaml
docs/ExamplesAndRef/Memory/Self-Repair/: meta.correctProtocol
