[project]
name = "nigel"
version = "0.1.0"
description = "Nigel Thornberry AI\\"
authors = [
    {name = "Tom Green"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "auto-py-to-exe (>=2.46.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


